--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin: 0;
+  min-height: 100vh;
 }
 h1,
 h2,
@@ -45,7 +47,6 @@ img {
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
-  position: sticky;
   top: 0;
   box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
@@ -137,7 +138,7 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(/images/people-office.jpg);
+    url(../images/people-office.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -400,6 +401,9 @@ img {
 .text-footer {
   max-width: 264px;
 }
+.footer-icons {
+  margin-right: 80px;
+}
 .social-media {
   font-weight: 500;
   color: #ffffff;
@@ -416,4 +420,267 @@ img {
 .page-footer .social-link-icon:hover,
 .page-footer .social-link-icon:focus {
   background-color: #31d0aa;
+}
+.footer-form {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  gap: 24px;
+}
+
+.footer-form-label {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  font-weight: 500;
+  color: #ffffff;
+}
+.footer-form-input {
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  max-width: 264px;
+  height: 40px;
+  background-color: inherit;
+}
+.footer-form-input::placeholder {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  padding: 8px 16px;
+  cursor: pointer;
+}
+.footer-form-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 24px;
+  max-width: 165px;
+  height: 40px;
+  color: #ffffff;
+  background-color: #4d5ae5;
+}
+.footer-btn-icon {
+  fill: #ffffff;
+}
+
+/* -------Modal------- */
+
+.btn,
+input,
+textarea {
+  font-family: inherit;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background: linear-gradient(
+    to bottom,
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)
+  );
+}
+.modal.is-open {
+  opacity: 1;
+  pointer-events: all;
+}
+.modal-overlay {
+  border: 1px solid #000;
+  border-radius: 4px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  max-width: 408px;
+  background-color: #fcfcfc;
+  padding: 24px 24px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-icon-close {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  margin-bottom: 24px;
+  background-color: #e7e9fc;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-end;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-icon-close:hover,
+.btn-icon-close:focus {
+  border: none;
+  border-radius: 100%;
+  fill: #ffffff;
+  background-color: #404bbf;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-name {
+  text-align: center;
+  color: #2e2f42;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.modal-label {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.modal-icon {
+  display: inline-block;
+  fill: #2e2f42;
+}
+.input-icon {
+  position: relative;
+}
+
+.modal-input {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  padding-left: 38px;
+  background-color: transparent;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-textarea:hover,
+.modal-input:hover,
+.modal-textarea:focus,
+.modal-input:focus {
+  border-color: #4d5ae5;
+  fill: #4d5ae5;
+}
+.input-icon:hover > .modal-icon,
+.input-icon:focus > .modal-icon {
+  fill: #4d5ae5;
+}
+
+.modal-icon {
+  display: block;
+  position: absolute;
+  content: '';
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding: 8px 16px;
+  overflow-y: auto;
+  outline: transparent;
+  margin-bottom: 16px;
+}
+.modal-textarea::placeholder {
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.modal-textarea:focus::placeholder,
+.modal-textarea:hover::placeholder {
+  color: #4d5ae5;
+}
+
+.checkbox-group-wrapper {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 24px;
+}
+.checkbox-span {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 8px;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+.checkbox-icon {
+  fill: #f4f4fd;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input-policy:checked + .modal-policy-label > .checkbox-span {
+  background-color: #404bbf;
+  border: 1px solid #404bbf;
+}
+.modal-input-policy:checked + .modal-policy-label .checkbox-icon {
+  opacity: 1;
+}
+.modal-policy-label {
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.privacy-policy-span {
+  color: #4d5ae5;
+  text-decoration: underline;
+  line-height: 1.33333;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+/* .privacy-policy-span:hover,
+.privacy-policy-span:focus {
+  color: #404bbf;
+  text-decoration: none;
+} */
+.modal-btn {
+  display: block;
+  margin: 0 auto;
+  border: none;
+  border-radius: 4px;
+  min-width: 169px;
+  height: 56px;
+  background-color: #4d5ae5;
+  color: #ffffff;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: #404bbf;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
