--- a/css/styles.css
+++ b/css/styles.css
@@ -543,48 +543,45 @@ textarea {
   margin-bottom: 16px;
 }
 .modal-form {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+  display: block;
 }
 
 .modal-label {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
   font-size: 12px;
   line-height: 1.16667;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
-.modal-icon {
-  display: inline-block;
-  fill: #2e2f42;
-}
 .input-icon {
   position: relative;
 }
+.modal-icon {
+  fill: #2e2f42;
+}
 
 .modal-input {
+  display: block;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
-  height: 40px;
-  padding-left: 38px;
   background-color: transparent;
   outline: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 8px 16px 8px 38px;
+  margin-bottom: 8px;
 }
+
 .modal-textarea:hover,
 .modal-input:hover,
 .modal-textarea:focus,
 .modal-input:focus {
   border-color: #4d5ae5;
-  fill: #4d5ae5;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .input-icon:hover > .modal-icon,
-.input-icon:focus > .modal-icon {
+.input-icon:focus-within > .modal-icon {
   fill: #4d5ae5;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-icon {
@@ -599,13 +596,13 @@ textarea {
 
 .modal-textarea {
   width: 100%;
-  height: 120px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   padding: 8px 16px;
   overflow-y: auto;
   outline: transparent;
-  margin-bottom: 16px;
+  margin-bottom: 12px;
+  resize: none;
 }
 .modal-textarea::placeholder {
   font-size: 12px;
@@ -616,15 +613,9 @@ textarea {
 .modal-textarea:focus::placeholder,
 .modal-textarea:hover::placeholder {
   color: #4d5ae5;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox-group-wrapper {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 8px;
-  margin-bottom: 24px;
-}
 .checkbox-span {
   display: inline-flex;
   justify-content: center;
@@ -632,6 +623,7 @@ textarea {
   margin-right: 8px;
   width: 16px;
   height: 16px;
+  margin-bottom: 24px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -645,6 +637,8 @@ textarea {
 .modal-input-policy:checked + .modal-policy-label > .checkbox-span {
   background-color: #404bbf;
   border: 1px solid #404bbf;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input-policy:checked + .modal-policy-label .checkbox-icon {
   opacity: 1;
@@ -660,6 +654,7 @@ textarea {
   text-decoration: underline;
   line-height: 1.33333;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 /* .privacy-policy-span:hover,
 .privacy-policy-span:focus {
@@ -668,7 +663,7 @@ textarea {
 } */
 .modal-btn {
   display: block;
-  margin: 0 auto;
+  margin: auto;
   border: none;
   border-radius: 4px;
   min-width: 169px;
