--- a/css/styles.css
+++ b/css/styles.css
@@ -485,7 +485,6 @@ textarea {
   width: 100%;
   height: 100%;
   z-index: 999;
-  background-color: rgba(46, 47, 66, 0.4);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   opacity: 0;
   pointer-events: none;
@@ -508,10 +507,11 @@ textarea {
   transform: translate(-50%, -50%);
   border: 1px solid #000;
   border-radius: 4px;
+  background-color: rgba(46, 47, 66, 0.4);
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
-  max-width: 408px;
-  height: 584px;
+  width: 408px;
+  min-height: 584px;
   background-color: #fcfcfc;
   padding: 72px 24px 24px 24px;
   display: flex;
@@ -542,10 +542,13 @@ textarea {
 .btn-icon-close:focus {
   border: none;
   border-radius: 100%;
-  fill: #ffffff;
   background-color: #404bbf;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-icon-btn:hover,
+.modal-icon-btn:focus {
+  fill: #ffffff;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-name {
@@ -614,6 +617,7 @@ textarea {
   outline: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 16px;
 }
 .form-list-policy {
   margin-bottom: 24px;
@@ -649,7 +653,7 @@ textarea {
   border: none;
   fill: #f4f4fd;
 }
-.privacy-policy-span {
+.policy-link {
   color: #4d5ae5;
   text-decoration: underline;
   line-height: 1.33333;
@@ -665,7 +669,6 @@ textarea {
   min-width: 169px;
   height: 56px;
   background-color: #4d5ae5;
-
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
