--- a/css/styles.css
+++ b/css/styles.css
@@ -485,16 +485,12 @@ textarea {
   width: 100%;
   height: 100%;
   z-index: 999;
+  background-color: rgba(46, 47, 66, 0.4);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   opacity: 0;
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  background: linear-gradient(
-    to bottom,
-    rgba(46, 47, 66, 0.7),
-    rgba(46, 47, 66, 0.7)
-  );
 }
 .modal.is-open {
   opacity: 1;
@@ -507,15 +503,12 @@ textarea {
   transform: translate(-50%, -50%);
   border: 1px solid #000;
   border-radius: 4px;
-  background-color: rgba(46, 47, 66, 0.4);
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   width: 408px;
   min-height: 584px;
   background-color: #fcfcfc;
   padding: 72px 24px 24px 24px;
-  display: flex;
-  flex-direction: column;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-icon-close {
@@ -535,19 +528,18 @@ textarea {
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
-.modal-icon-btn {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 .btn-icon-close:hover,
 .btn-icon-close:focus {
   border: none;
-  border-radius: 100%;
   background-color: #404bbf;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #ffffff;
+}
+.modal-icon-btn {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-icon-btn:hover,
 .modal-icon-btn:focus {
-  fill: #ffffff;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -602,7 +594,9 @@ textarea {
   border-color: #4d5ae5;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.form-list-policy {
+  margin-bottom: 16px;
+}
 .modal-textarea {
   width: 100%;
   height: 120px;
@@ -617,7 +611,6 @@ textarea {
   outline: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-bottom: 16px;
 }
 .form-list-policy {
   margin-bottom: 24px;
