--- a/css/styles.css
+++ b/css/styles.css
@@ -594,7 +594,7 @@ textarea {
   border-color: #4d5ae5;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-list-policy {
+.form-list-textarea {
   margin-bottom: 16px;
 }
 .modal-textarea {
